# globby

./: globby.cabal
app/: Main.hs
src/: Globber.hs  Matcher.hs  Parser.hs  Types.hs
test/: Spec.hs
