name:                globby
version:             0.1.0.0
synopsis:            Simple glob matcher
description:         Please see README.md
homepage:            https://github.com/gabesoft/globby#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          gabesoft@gmail.com
copyright:           2016 Gabriel Adomnicai
category:            Shell
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Globber, Types, Matcher, Parser
  build-depends:       base >= 4.7 && < 5, containers >= 0.5
  default-language:    Haskell2010

executable globby-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , globby
  default-language:    Haskell2010

test-suite globby-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , globby
                     , hspec >= 2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/globby
